--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,11 +5,23 @@ body{
 
 section#navbar{
     height: 100px;
-    background-color: red;
+}
+
+main{
+    height: calc(100vh - 100px);
 }
 
 section#folders{
-    height: calc(100vh - 100px);
-    width: 250px;
+    width: 200px;
     background-color: black;
+    color: white;
+}
+
+section#folders ul>li{
+    list-style-type: none;
+}
+
+section#main{
+    width: calc(100% - 200px);
+    background-color: blue;
 }
