--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,7 @@
 
 body{
     font-family: "roboto";
+    font-size: bolder;
 }
 
 .bg-trasparent{
@@ -12,14 +13,14 @@ body{
 
 main{
     height: 100px;
-    width: calc(100% - 200px);
+    width: calc(100% - 150px);
     background-color: hsl(214.54deg 81.67% 50.78%);
 }
 
 /*COSTUM ASIDE*/
 
 aside{
-    width: 200px;
+    width: 150px;
     color: white;
 }
 
